--- a/resources/css/custom-style.css
+++ b/resources/css/custom-style.css
@@ -50,3 +50,15 @@ iframe.g15-coins{
 	border: 0px;
 
 }
+
+table#notes-table {
+	opacity: 0;
+	display: none;
+}
+
+div#zero-notes {
+	opacity: 0;
+	text-align: center;
+	font-weight: bold;
+	font-size: 4.6em;
+}
