--- a/resources/css/custom-style.css
+++ b/resources/css/custom-style.css
@@ -44,11 +44,17 @@ code {
 	font-size: 80%;
 }
 
-iframe.g15-coins{
+iframe {
 	width: 100%;
-	height: 600px;
 	border: 0px;
+}
 
+iframe.g15-coins{
+	height: 600px;
+}
+
+iframe.g-solitare {
+	height: 600px;
 }
 
 table#notes-table {
@@ -62,3 +68,7 @@ div#zero-notes {
 	font-weight: bold;
 	font-size: 4.6em;
 }
+
+/*.container {
+	width: 980px !important;
+}*/
